force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/Tigerface1__Test_Table_Custom_Object__c.object-meta.xml
<CustomObject>
    <description>WARNING: DO NOT MODIFY THIS CUSTOM OBJECT, ANY OF ITS FIELDS, OR ANY OF ITS FIELD SETS.  ANY MODIFICATIONS WILL CAUSE THE APEX TEST CLASSES TO FAIL.  This custom object is used by the Apex Test Classes to load data into in order to test the logic of the Apex code.  The test classes depend on a fixed configuration of fields and field sets in order for the automated tests to execute correctly.</description>
    <label>Test Table Custom Object</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Test Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Table Custom Objects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>