force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Currency__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Currency__c</fullName>
    <description>Used to test currency values.</description>
    <label>Test Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>