force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Custom_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Custom_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to test Lookups who&apos;s parents are custom objects.</description>
    <label>Test Custom Lookup</label>
    <referenceTo>Tigerface1__Test_Table_Custom_Object__c</referenceTo>
    <relationshipLabel>Test Table Custom Objects</relationshipLabel>
    <relationshipName>Test_Table_Custom_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>