force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Date__c</fullName>
    <description>Used to test date fields.</description>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>