force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Date_Time__c</fullName>
    <description>Used to test date time fields.</description>
    <label>Test Date Time</label>
    <type>DateTime</type>
</CustomField>