force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Double__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Double__c</fullName>
    <description>Used to test double fields.</description>
    <label>Test Double</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>