force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Email__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Email__c</fullName>
    <description>Used to test email fields.</description>
    <label>Test Email</label>
    <type>Email</type>
</CustomField>