force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Formula__c</fullName>
    <description>Used to test formula fields.</description>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula</label>
    <type>Date</type>
</CustomField>