force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Geolocation__c</fullName>
    <description>Used to test Geolocation fields.</description>
    <label>Test Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>