force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Multi_Select_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Multi_Select_Picklist__c</fullName>
    <description>Used to test multi select picklist fields.</description>
    <label>Test Multi Select Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
                <label>One1</label>
            </value>
            <value>
                <fullName>Two</fullName>
                <label>Two2</label>
            </value>
            <value>
                <fullName>Three</fullName>
                <label>Three3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>