force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Percent_Fields__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Percent_Fields__c</fullName>
    <description>Used to test percent fields.</description>
    <label>Test Percent Fields</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>