force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Phone__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Phone__c</fullName>
    <description>Used to test phone fields.</description>
    <label>Test Phone</label>
    <type>Phone</type>
</CustomField>