force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Picklist__c</fullName>
    <description>Used to test picklist fields.</description>
    <label>Test Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>YesA</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>NoB</label>
            </value>
            <value>
                <fullName>Maybe</fullName>
                <label>MaybeC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>