force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Text_Area__c</fullName>
    <description>Used to test text area fields.</description>
    <label>Test Text Area</label>
    <type>TextArea</type>
</CustomField>