force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/fields/Tigerface1__Test_Text_Area_Rich__c.field-meta.xml
<CustomField>
    <fullName>Tigerface1__Test_Text_Area_Rich__c</fullName>
    <description>Used to test Text Area Rich fields.</description>
    <label>Test Text Area Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>