force-app/main/default/objects/Tigerface1__Test_Table_Custom_Object__c/recordTypes/Tigerface1__Type_2.recordType-meta.xml
<RecordType>
    <fullName>Tigerface1__Type_2</fullName>
    <active>true</active>
    <description>This is used for Apex test classes.</description>
    <label>Type 2</label>
</RecordType>